--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@sentry/browser": "^7.0.0",
         "@sentry/tracing": "^7.0.0",
         "@testing-library/react-hooks": "^8.0.1",
+        "@types/cheerio": "^0.22.31",
         "await-lock": "^2.1.0",
         "blurhash": "^1.1.3",
         "cheerio": "^1.0.0-rc.9",
